# dex-router

./: .gitignore  Cargo.toml  flake.nix
dexrouter-arbitrage/: Cargo.toml
dexrouter-arbitrage/src/: lib.rs  main.rs
dexrouter-optim/: Cargo.toml
dexrouter-optim/src/: lib.rs
dexrouter-optim/src/market/: mod.rs
dexrouter-optim/src/utility/: mod.rs
dexrouter-optim/tests/: liquidate.rs  markets.json  uniswap_v3.rs
src/: lib.rs  main.rs
src/market/: mod.rs
src/utility/: mod.rs
