[package]
name = "dexrouter-arbitrage"
version = "0.1.0"
edition = "2024"

[dependencies]
dexrouter-optim = { path = "../dexrouter-optim" }

anyhow.workspace = true
argmin.workspace = true
bigdecimal.workspace = true
ndarray.workspace = true

alloy = { version = "1.5.2", features = ["provider-ws", "contract"] }
alloy-contract = "1.6.1"
alloy-sol-types = "1.5.4"
ruint = { version = "1.17.2", features = ["bigdecimal"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
